part-3/log-output/mainfests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dwk
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output-writer
          image: sathirak/log-output-writer:13
          command: ["/app/main"]
          volumeMounts:
            - name: config-volume
              mountPath: /usr/src/app/files
        - name: log-output-reader
          image: sathirak/log-output-reader:13
          command: ["/app/main"]
          volumeMounts:
            - name: config-volume
              mountPath: /usr/src/app/files
          ports:
            - containerPort: 3000
      volumes:
        - name: config-volume
          configMap:
            name: log-output-configmap
