part-3/log-output/mainfests/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: dwk
  name: log-output-svc
spec:
  type: NodePort
  selector:
    app: log-output 
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
