part-3/log-output/mainfests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dwk
  name: dwk-shared-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Exact
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 2345
      - path: /count
        pathType: Exact
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 2345
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2345
